--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "element-plus": "^2.9.9",
     "pinia": "^3.0.2",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
