--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.9.0",
     "element-plus": "^2.9.9",
     "pinia": "^3.0.2",
+    "quill": "1.3.4",
+    "quill-image-resize-module-ts": "^3.0.3",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.5.13",
     "vue-router": "4"
