--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.9.9",
     "pinia": "^3.0.2",
     "quill": "1.3.4",
+    "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-ts": "^3.0.3",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.5.13",
